# milvus-python-toolkit

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: mvp-plan-cn.md  python-connector-design-cn.md  python-offline-toolkit-design-cn.md
examples/: 01_inspect_snapshot.py  02_create_snapshot.py  03_write_and_read_snapshot.py  04_backfill_snapshot.py  05_create_snapshot_from_milvus_snapshot.py
milvus_toolkit/: __init__.py  api.py  types.py
milvus_toolkit/_vendor/: __init__.py
milvus_toolkit/cli/: main.py
milvus_toolkit/core/: dataset.py  inspection.py  manifest.py  native_snapshot.py  planner.py  plans.py  schema.py  snapshot.py
milvus_toolkit/engines/: local.py
milvus_toolkit/io/: milvus_client.py  object_store.py  reader.py  storage.py
ray_milvus/: __init__.py  api.py  errors.py  types.py
ray_milvus/cli/: main.py
ray_milvus/core/: dataset.py  inspection.py  manifest.py  native_snapshot.py  planner.py  plans.py  schema.py  snapshot.py
ray_milvus/engines/: blocks.py  local.py  ray.py
ray_milvus/io/: milvus_service.py  object_store.py  reader.py  storage.py
scripts/: build_milvus_storage.py  hatch_build.py  install_dev.sh
tests/fixtures/: snapshot_non_storage_v3.json  snapshot_storage_v3.json
tests/fixtures/native_snapshot/123/metadata/: 456.json
tests/integration/: test_create_snapshot_from_milvus_smoke.py  test_milvus_storage_install.py  test_native_snapshot_import.py  test_read_snapshot_fake_storage.py
tests/unit/: test_cli.py  test_import_boundaries.py  test_inspection.py  test_milvus_client.py  test_milvus_service.py  test_native_snapshot.py  test_object_store.py  test_planner.py  test_public_api.py  test_ray_blocks.py  test_ray_core_engine.py  test_read_snapshot.py  test_schema.py  test_snapshot.py  test_storage_reader.py
