[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milvus-toolkit"
version = "0.1.0"
description = "Milvus Python Toolkit for offline StorageV3 snapshot inspection and reads."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Milvus Python Toolkit contributors" }
]
dependencies = [
  "pyarrow>=14",
  "milvus-storage @ git+https://github.com/milvus-io/milvus-storage.git@main#subdirectory=python",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "ruff>=0.4",
]

[project.scripts]
milvus-toolkit = "milvus_toolkit.cli.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["milvus_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
