[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milvus-toolkit"
version = "0.1.0"
description = "Milvus Python Toolkit for offline StorageV3 snapshot inspection and reads."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Milvus Python Toolkit contributors" }
]
dependencies = [
  "pyarrow>=17.0.0",
  "numpy>=1.20.0",
  "cffi>=1.17.1",
  "pandas>=2.3.3",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "ruff>=0.4",
]

[project.scripts]
milvus-toolkit = "milvus_toolkit.cli.main:main"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["milvus_toolkit"]
artifacts = [
  "third_party/milvus-storage/python/milvus_storage/lib/*.so",
  "third_party/milvus-storage/python/milvus_storage/lib/*.dylib",
  "third_party/milvus-storage/python/milvus_storage/lib/*.dll",
]

[tool.hatch.build.targets.wheel.force-include]
"third_party/milvus-storage/python/milvus_storage" = "milvus_toolkit/_vendor/milvus_storage"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
