[build-system]
requires = ["hatchling", "conan>=2"]
build-backend = "hatchling.build"

[project]
name = "ray-milvus"
version = "0.1.0"
description = "ray-milvus for Milvus StorageV3 snapshot reads, writes, and Ray execution."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "ray-milvus contributors" }
]
dependencies = [
  "pyarrow>=17.0.0",
  "numpy>=1.20.0",
  "cffi>=1.17.1",
  "pandas>=2.3.3",
]

[project.optional-dependencies]
native-snapshot = [
  "fastavro>=1.9",
]
pymilvus = [
  "pymilvus>=2.4",
]
ray = [
  "ray>=2.9",
]
test = [
  "pytest>=7",
  "ruff>=0.4",
]

[project.scripts]
ray-milvus = "ray_milvus.cli.main:main"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["ray_milvus"]
artifacts = [
  "third_party/milvus-storage/python/milvus_storage/lib/*.so",
  "third_party/milvus-storage/python/milvus_storage/lib/*.dylib",
  "third_party/milvus-storage/python/milvus_storage/lib/*.dll",
]

[tool.hatch.build.targets.wheel.force-include]
"third_party/milvus-storage/python/milvus_storage" = "ray_milvus/_vendor/milvus_storage"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["third_party", "ray_milvus/_vendor/milvus_storage"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
